<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewmodel"
            type="com.shin.movieapp.ui.user.UserViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.user.EditUserActivity">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="50dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:civ_border_width="2dp"
            android:src="@{viewmodel.user.profileImg}" />

        <EditText
            android:id="@+id/username_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@={viewmodel.user.userName}"
            android:textAlignment="center"
            android:textColor="@color/design_default_color_on_secondary"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_image"
            android:background="@null" />

        <TextView
            android:id="@+id/birthDay_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:drawableLeft="@drawable/ic_cake_black_24dp"
            android:drawablePadding="20dp"
            android:text="@{viewmodel.user.birthDay}"
            android:textColor="@color/design_default_color_on_secondary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/username_edit_text"
            android:textSize="18sp"
            android:background="@null" />

        <EditText
            android:id="@+id/mail_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:drawableLeft="@drawable/ic_email_black_24dp"
            android:drawablePadding="20dp"
            android:text="@={viewmodel.user.mail}"
            android:textColor="@color/design_default_color_on_secondary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/birthDay_edit_text"
            android:textSize="18sp"
            android:background="@null" />

        <ImageView
            android:id="@+id/gender_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:drawablePadding="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/mail_edit_text"
            android:textSize="18sp"
            app:srcCompat="@drawable/ic_person_black_24dp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/gender_constraint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            app:layout_constraintBottom_toBottomOf="@id/gender_icon"
            app:layout_constraintStart_toEndOf="@id/gender_icon"
            app:layout_constraintTop_toBottomOf="@+id/mail_text"
            app:layout_constraintTop_toTopOf="@id/gender_icon">

            <RadioGroup
                android:id="@+id/gender_radio_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintTop_toTopOf="@+id/gender_constraint"
                android:checkedButton="@{viewmodel.radio_checked}">

                <RadioButton
                    android:id="@+id/male_radio_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layoutDirection="rtl"
                    android:text="Male"
                    android:textSize="18sp"
                    android:layout_marginRight="30dp" />

                <RadioButton
                    android:id="@+id/female_radio_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layoutDirection="rtl"
                    android:text="@string/female"
                    android:textSize="18sp" />
            </RadioGroup>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="30dp"
            android:background="#20BCBC"
            android:text="@string/cancel_text"
            android:textColor="#FFFFFF"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

        <Button
            android:id="@+id/done_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#057AFF"
            android:text="@string/done_text"
            android:textColor="#FFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="20dp"
            app:layout_constraintTop_toTopOf="@+id/cancel_button"
            app:layout_constraintBottom_toBottomOf="@+id/cancel_button" />


    </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>