<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.shin.movieapp.ui.user.UserViewModel" />
    </data>

    <androidx.drawerlayout.widget.DrawerLayout
        android:id="@+id/drawerLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:openDrawer="start">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolBar"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:background="@color/colorStar"
                android:theme="@style/ToolbarThemeOverlay"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:titleTextAppearance="@style/ToolbarText"
                app:titleTextColor="#ffffff"></androidx.appcompat.widget.Toolbar>

            <fragment
                android:id="@+id/my_nav_host_fragment"
                android:name="androidx.navigation.fragment.NavHostFragment"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:defaultNavHost="true"
                app:layout_constraintBottom_toTopOf="@id/bottom_nav"
                app:layout_constraintTop_toBottomOf="@+id/toolBar"
                app:navGraph="@navigation/navigation" />

            <com.google.android.material.bottomnavigation.BottomNavigationView
                android:id="@+id/bottom_nav"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="#3B5AFF"
                app:itemIconTint="@drawable/selector_bottombar_text"
                app:itemTextColor="@drawable/selector_bottombar_text"
                app:labelVisibilityMode="labeled"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:menu="@menu/bottom_nav_menu" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.navigation.NavigationView
            android:id="@+id/navView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:fitsSystemWindows="true">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="5dp">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/profile_image"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_marginTop="30dp"
                        android:src="@{viewModel.user.profileImg}"
                        app:civ_border_width="2dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/username_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:text="@{viewModel.user.userName}"
                        android:textAlignment="center"
                        android:textColor="@color/design_default_color_on_secondary"
                        android:textSize="22sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/profile_image" />

                    <TextView
                        android:id="@+id/birthDay_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="20dp"
                        android:drawableLeft="@drawable/ic_cake_black_24dp"
                        android:drawablePadding="20dp"
                        android:text="@{viewModel.user.birthDay}"
                        android:textColor="@color/design_default_color_on_secondary"
                        android:textSize="18sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/username_text" />

                    <TextView
                        android:id="@+id/mail_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="20dp"
                        android:drawableLeft="@drawable/ic_email_black_24dp"
                        android:drawablePadding="20dp"
                        android:text="@{viewModel.user.mail}"
                        android:textColor="@color/design_default_color_on_secondary"
                        android:textSize="18sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/birthDay_text" />

                    <TextView
                        android:id="@+id/gender_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="20dp"
                        android:drawableLeft="@drawable/ic_person_black_24dp"
                        android:drawablePadding="20dp"
                        android:text="@{viewModel.user.gender}"
                        android:textColor="@color/design_default_color_on_secondary"
                        android:textSize="18sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/mail_text" />

                    <Button
                        android:id="@+id/edit_button"
                        android:layout_width="120dp"
                        android:layout_height="35dp"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/rounded_shape"
                        android:text="@string/edit_button"
                        android:textColor="@color/design_default_color_background"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/gender_text" />

                    <TextView
                        android:id="@+id/reminder_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:text="@string/reminder_list"
                        android:textColor="@color/design_default_color_on_secondary"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/edit_button" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/reminder_list_recycle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/reminder_label"
                        tools:itemCount="2"
                        tools:listitem="@layout/reminder_list_item" />

                    <Button
                        android:id="@+id/show_all_reminder"
                        android:layout_width="120dp"
                        android:layout_height="35dp"
                        android:layout_marginTop="30dp"
                        android:background="@drawable/rounded_shape"
                        android:text="@string/show_all"
                        android:textColor="@color/design_default_color_background"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/reminder_list_recycle" />

                    <TextView
                        android:id="@+id/copyright_text"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/copyright"
                        android:textColor="@color/design_default_color_on_secondary"
                        android:textSize="18sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/show_all_reminder" />


                </androidx.constraintlayout.widget.ConstraintLayout>
            </ScrollView>
        </com.google.android.material.navigation.NavigationView>

    </androidx.drawerlayout.widget.DrawerLayout>
</layout>
